--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,4 @@
 \section*{Introduction} % Pas de numérotation
-\addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
 
 Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de plus en plus importante.
 
@@ -9,7 +8,7 @@ La compression et l'indexation des reads, fragments d'ADN retournés par les sé
 
 Beaucoup d'algorithmes sur la compression de données existent déjà, et sont utilisés pour stocker des données biologiques. 
 
-Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particuliers que sont les reads.
+Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particulier que sont les reads.
 
 Ce travail a été réalisé au cours du stage de fin de licence informatique à Lille 1, dans l'équipe de bio-informatique Bonsai.
 
