--- a/rapport2.tex
+++ b/rapport2.tex
@@ -8,8 +8,11 @@
 \usepackage[pdftex]{graphicx}
 \usepackage{setspace}
 \usepackage{xcolor}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[french]{varioref}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+%\usepackage[ruled,vlined]{algorithm2e}
 
 \newcommand{\reporttitle}{Algorithme de recherche dans des données de séquençage ADN avec la transformée de Burrows-Wheeler à contexte borné}     % Titre
 \newcommand{\reportauthor}{Marion \textsc{Tommasi}} % Auteur
@@ -18,9 +21,9 @@
 \setlength{\parskip}{1ex} % Espace entre les paragraphes
 \renewcommand{\baselinestretch}{1.5}
 
-\newcommand{\adn}{\textsc{adn}}
-\newcommand{\bwt}{\textsc{bwt}}
-\newcommand{\kbwt}{$k$-\textsc{bwt}}
+\newcommand{\adn}{\textsc{adn\xspace}}
+\newcommand{\bwt}{\textsc{bwt\xspace}}
+\newcommand{\kbwt}{$k$-\textsc{bwt\xspace}}
 
 \hypersetup{
     pdftitle={\reporttitle},%
